--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -24,6 +24,7 @@
         <p class="pIpare">Welcome to Your PC Shop</p>
         <p class="description">We have <span class="fancy">everything a gamer wants</span></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi ipsum obcaecati labore eaque, incidunt quidem ut.</p>
+        <img src="../Photo/pc33.png" alt="PC Photo">
         <!-- main divi ku esht ajo makina (div-i i pare) -->
     </div>
     <div class="pcBrands">
@@ -37,7 +38,8 @@
     </div>
     
     <div class="latestThings">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quas quae ratione iste, temporibus sunt doloremque neque provident accusantium harum asperiores corporis unde vitae possimus non! Dolore at quibusdam sapiente.
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quas quae ratione iste, temporibus sunt doloremque neque provident accusantium harum asperiores corporis unde vitae possimus non! Dolore at quibusdam sapiente.
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus impedit nisi nesciunt, eius, optio recusandae quos suscipit accusantium, ullam numquam consequatur voluptatibus similique error. Totam necessitatibus quibusdam vero autem quidem?
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum distinctio at exercitationem error commodi delectus molestiae, nesciunt odio necessitatibus qui cupiditate. Perferendis culpa odio rem repudiandae perspiciatis deleniti, libero fugit!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quas quae ratione iste, temporibus sunt doloremque neque provident accusantium harum asperiores corporis unde vitae possimus non! Dolore at quibusdam sapiente.
@@ -49,6 +51,8 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quas quae ratione iste, temporibus sunt doloremque neque provident accusantium harum asperiores corporis unde vitae possimus non! Dolore at quibusdam sapiente.
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus impedit nisi nesciunt, eius, optio recusandae quos suscipit accusantium, ullam numquam consequatur voluptatibus similique error. Totam necessitatibus quibusdam vero autem quidem?
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum distinctio at exercitationem error commodi delectus molestiae, nesciunt odio necessitatibus qui cupiditate. Perferendis culpa odio rem repudiandae perspiciatis deleniti, libero fugit!
+        </p>
+        
         <!-- ktu do bejm gjerat e reja  -->
     </div>
     <footer>
