--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -20,13 +20,18 @@
             <a href="#">About Us</a>
             <!-- per navigation barin -->
         </nav>
-        <br><br><br><br>
+        <br>
         <p class="pIpare">Welcome to Your PC Shop</p>
         <p class="description">We have <span class="fancy">everything a gamer wants</span></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi ipsum obcaecati labore eaque, incidunt quidem ut.</p>
-        <img src="../Photo/pc33.png" alt="PC Photo">
+        <div class="image-container">
+            <img class="PC1" src="../Photo/PC1.png" alt="PC Photo">
+            <img class="keyboard" src="../Photo/keyboard.png" alt="Keyboard Photo">
+        </div>
         <!-- main divi ku esht ajo makina (div-i i pare) -->
+        <hr>
     </div>
+    
     <div class="pcBrands">
         <h1>BRANDED E PCVE</h1>
 
