Added the image row

--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -28,8 +28,18 @@
         <!-- main divi ku esht ajo makina (div-i i pare) -->
     </div>
     <div class="pcBrands">
-        <h1>BRANDED E PCVE</h1>
-
+        <h1><center>Best seller brands</center>></h1>
+        <div class="image-row">
+            
+            <img src="../Photo/Dell_thumbnail (1).png" alt="" style="width: 150; height: 110px;">
+            <img src="../Photo/plsWork.png" alt=""style="width: 130; height: 110px;">
+            <img src="../Photo/lenovo.png" alt="" style="width: 150; height: 110px;">
+            <img src="../Photo/nig.png" alt="" style="width: 150; height: 110px;">
+            <img src="../Photo/apple_thumbnail.png" alt="" style="width: 150; height: 110px;">
+            <img src="../Photo/download.png" alt=""style="width: 150; height: 100px;">
+            <img src="../Photo/Windows_logo_-_2012.svg.png" alt="" style="width: 100px; height: 100px; padding-top: 5px;">
+            
+        </div>
         <!-- used things  -->
         <div class="aboutUs">
         <h1>NJE PERSHKRIM I VOGEL</h1>
