--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -33,7 +33,7 @@
     </div>
     
     <div class="pcBrands">
-        <h1><center>Best seller brands</center>></h1>
+        <h1><center>Best seller brands</center></h1>
         <div class="image-row">
             
             <img src="../Photo/Dell_thumbnail (1).png" alt="" style="width: 150; height: 110px;">
