--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -22,8 +22,39 @@
         </nav>
         <br>
         <p class="pIpare">Welcome to Your PC Shop</p>
+
+        <span class="search-container">
+            <p>Search Your PC</p>
+            <label>Brand</label>
+                <select>
+                    <option value="Select"></option>
+                    <option>iksi</option>
+                    <option>leva me</option>
+                    <option>djers</option>
+                </select>
+
+                <label>RAM</label>
+                <select>
+                    <option value="Select"></option>
+                    <option>iksi</option>
+                    <option>leva me</option>
+                    <option>djers</option>
+                </select>
+
+                <label>ROM</label>
+                <select>
+                    <option value="Select"></option>
+                    <option>iksi</option>
+                    <option>leva me</option>
+                    <option>djers</option>
+                </select>
+        </span>
+
         <p class="description">We have <span class="fancy">everything a gamer wants</span></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi ipsum obcaecati labore eaque, incidunt quidem ut.</p>
+        
+
+
         <div class="image-container">
             <img class="PC1" src="../Photo/PC1.png" alt="PC Photo">
             <img class="keyboard" src="../Photo/keyboard.png" alt="Keyboard Photo">
