Revert "added crousel"
This reverts commit a07b6c1fb9e1fad5e0e0a1954f4767f5ce27e9ed.

--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -85,6 +85,7 @@
             
             <img src="../Photo/Dell_thumbnail (1).png" alt="" style="width: 150; height: 110px;">
             <img src="../Photo/plsWork.png" alt=""style="width: 130; height: 110px;">
+            <img src="../Photo/plsWork.png" alt=""style="width: 130; height: 110px;">
             <img src="../Photo/lenovo.png" alt="" style="width: 150; height: 110px;">
             <img src="../Photo/nig.png" alt="" style="width: 150; height: 110px;">
             <img src="../Photo/apple_thumbnail.png" alt="" style="width: 150; height: 110px;">
@@ -93,6 +94,48 @@
             
         </div>
         <!-- used things  -->
+        <div class="aboutUs">
+        <h1>NJE PERSHKRIM I VOGEL</h1>
+        <!-- pjesa e shkurter e about us -->
+    </div>
+            <img src="../Photo/download.png" alt=""style="width: 150; height: 100px;">
+            <img src="../Photo/Windows_logo_-_2012.svg.png" alt="" style="width: 100px; height: 100px; padding-top: 5px;">   
+        </div>
+        <h1><center>Editors recommendation</center></h1>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-text">
+                    <h2>Workstation</h2>
+                    <p>All in one. PC, monitor, mouse and keyboard.</p>
+                    <button class="btn">$1000</button>
+                </div>
+                <img src="../Photo/img1.jpg" alt="" class="inside-container">
+            </div>
+            <div class="card">
+                <div class="card-text">
+                    <h2>Workstation</h2>
+                    <p>All in one. PC, monitor, mouse and keyboard.</p>
+                    <button class="btn">$1000</button>
+                </div>
+                <img src="../Photo/img1.jpg" alt="" class="inside-container">
+            </div>
+            <div class="card">
+                <div class="card-text">
+                    <h2>Workstation</h2>
+                    <p>All in one. PC, monitor, mouse and keyboard.</p>
+                    <button class="btn">$1000</button>
+                </div>
+                <img src="../Photo/img1.jpg" alt="" class="inside-container">
+            </div>
+            <div class="card">
+                <div class="card-text">
+                    <h2>Workstation</h2>
+                    <p>All in one. PC, monitor, mouse and keyboard.</p>
+                    <button class="btn">$1000</button>
+                </div>
+                <img src="../Photo/img1.jpg" alt="" class="inside-container">
+            </div> 
+        </div>
         <div class="aboutUs">
         <h1>NJE PERSHKRIM I VOGEL</h1>
         <!-- pjesa e shkurter e about us -->
