--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/mainPage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="../CSS/mainPageFooter.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
