--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -97,7 +97,7 @@
         <h1><center>Editors recommendation</center></h1>
        
         <div class="swiper-container">
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper" style="padding-bottom: 30px;">
                 <div class="swiper-slide">
                     <div class="card-container">
                         <div class="card">
