--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -223,35 +223,35 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col">
-                    <h4>company</h4>
+                    <h4>Reach to Us</h4>
                     <ul>
-                        <li><a href="#">about us</a></li>
-                        <li><a href="#">our services</a></li>
-                        <li><a href="#">privacy policy</a></li>
-                        <li><a href="#">affiliate program</a></li>
+                        <li><a href="https://goo.gl/maps/Bk2WFKBgYETUSXpy7">2203 E. Empire Street, Suite J Bloomington, IL, USA 61704</a></li>
+                        <li><a href="#"> Phone: +355692085698</a></li>
+                        <li><a href="#">Phone: +44-458-20-369</a></li>
+                        <li><a href="#">Email: pcstore@yahoo.com</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>get help</h4>
+                    <h4>Shopping</h4>
                     <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">shipping</a></li>
-                        <li><a href="#">returns</a></li>
-                        <li><a href="#">order status</a></li>
+                        <li><a href="#">Product Availability</a></li>
+                        <li><a href="#">Online Order Restrictions</a></li>
+                        <li><a href="#">Return Policy</a></li>
+                        <li><a href="#">Credit Cards Accepted</a></li>
                         <li><a href="#">payment options</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>online shop</h4>
+                    <h4>Costumer service</h4>
                     <ul>
-                        <li><a href="#">watch</a></li>
-                        <li><a href="#">bag</a></li>
-                        <li><a href="#">shoes</a></li>
-                        <li><a href="#">dress</a></li>
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">Check Order Status</a></li>
+                        <li><a href="#">Recycling</a></li>
+                        <li><a href="#">Frequently Asked Questions</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>follow us</h4>
+                    <h4>Connect with Us</h4>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -261,6 +261,9 @@
                 </div>
             </div>
         </div>
+        <br><p class="footer-copyright">
+            &copy; 2023 PC STORE. All rights reserved.
+        </p>
    </footer>
 </body>
 </html>
