--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -17,7 +17,7 @@
         <nav class="navBar">
             <a href="../HTML/MainPage.html">Home</a>
             <a href="#">Service</a>
-            <a href="#">Catalog</a>
+            <a href="CatalogPage.html">Catalog</a>
             <a href="#">Parts</a>
             <a href="#">About Us</a>
             <!-- per navigation barin -->
