--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -13,16 +13,18 @@
 
 </head>
 <body>
-    <div class="mainDiv">
-        <nav class="navBar">
+    <nav class="navBar">
+        
             <a href="../HTML/MainPage.html">Home</a>
             <a href="#">Service</a>
-            <a href="CatalogPage.html">Catalog</a>
+            <a href="#">Catalog</a>
             <a href="#">Parts</a>
             <a href="#">About Us</a>
             <!-- per navigation barin -->
         </nav>
-        <br><br><br>
+    <div class="mainDiv">
+        
+        <br>
         <span class="search-container">
 
               <h3>Search Your PC</h3>
