--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -109,7 +109,7 @@
                         <div class="card">
                             <div class="card-text">
                                 <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p>
+                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
                             <img src="../Photo/img1.jpg" alt="" class="inside-container">
@@ -117,7 +117,7 @@
                         <div class="card">
                             <div class="card-text">
                                 <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p>
+                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
                             <img src="../Photo/img1.jpg" alt="" class="inside-container">
@@ -125,7 +125,7 @@
                         <div class="card">
                             <div class="card-text">
                                 <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p>
+                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
                             <img src="../Photo/img1.jpg" alt="" class="inside-container">
@@ -133,7 +133,7 @@
                         <div class="card">
                             <div class="card-text">
                                 <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p>
+                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
                             <img src="../Photo/img1.jpg" alt="" class="inside-container">
@@ -147,7 +147,7 @@
                         <div class="card">
                             <div class="card-text">
                                 <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p>
+                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
                             <img src="../Photo/img1.jpg" alt="" class="inside-container">
@@ -155,7 +155,7 @@
                         <div class="card">
                             <div class="card-text">
                                 <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p>
+                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
                             <img src="../Photo/img1.jpg" alt="" class="inside-container">
@@ -163,7 +163,7 @@
                         <div class="card">
                             <div class="card-text">
                                 <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p>
+                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
                             <img src="../Photo/img1.jpg" alt="" class="inside-container">
@@ -171,7 +171,7 @@
                         <div class="card">
                             <div class="card-text">
                                 <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p>
+                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
                             <img src="../Photo/img1.jpg" alt="" class="inside-container">
