--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -30,7 +30,7 @@
         <p>Here you can find our product catalog.</p>
         <!-- Add your catalog content here -->
     </div>
-    <br>
+    <div class="secondDiv">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
 <div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
@@ -39,7 +39,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="https://www.bootdey.com/image/194x228/87CEFA" alt="194x228" class="img-responsive"> 
+						<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -49,20 +49,21 @@
 				<div class="product-deatil">
 						<h5 class="name">
 							<a href="#">
-								Product Name Title Here <span>Category</span>
+								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
 							</a>
 						</h5>
 						<p class="price-container">
-							<span>$99</span>
+							<span>800$</span>
 						</p>
 						<span class="tag1"></span> 
 				</div>
 				<div class="description">
-					<p>Proin in ullamcorper lorem. Maecenas eu ipsum </p>
+					<p>14” 2.8K OLED convertible laptop
+                        16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
 				</div>
 				<div class="product-info smart-form">
 					<div class="row">
-						<div class="col-md-6 col-sm-6 col-xs-6"> 
+						<div class="col-md-6 col-sm-6 col-xs-6"> <br>
 							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6">
@@ -183,6 +184,102 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
+						<img src="https://www.bootdey.com/image/194x228/B0C4DE" alt="194x228" class="img-responsive"> 
+						<span class="tag2 hot">
+							HOT
+						</span> 
+					</div>
+				</div>
+				<div class="col-md-7 col-sm-12 col-xs-12">
+				<div class="product-deatil">
+						<h5 class="name">
+							<a href="#">
+								Product Name Title Here <span>Category</span>
+							</a>
+						</h5>
+						<p class="price-container">
+							<span>$99</span>
+						</p>
+						<span class="tag1"></span> 
+				</div>
+				<div class="description">
+					<p>Proin in ullamcorper lorem. Maecenas eu ipsum </p>
+				</div>
+				<div class="product-info smart-form">
+					<div class="row">
+						<div class="col-md-6 col-sm-6 col-xs-6"> 
+							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
+						</div>
+						<div class="col-md-6 col-sm-6 col-xs-6">
+							<div class="rating">
+								<label for="stars-rating-5"><i class="fa fa-star"></i></label>
+								<label for="stars-rating-4"><i class="fa fa-star"></i></label>
+								<label for="stars-rating-3"><i class="fa fa-star text-primary"></i></label>
+								<label for="stars-rating-2"><i class="fa fa-star text-primary"></i></label>
+								<label for="stars-rating-1"><i class="fa fa-star text-primary"></i></label>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end product -->
+</div>
+<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
+	<!-- product -->
+	<div class="product-content product-wrap clearfix">
+		<div class="row">
+				<div class="col-md-5 col-sm-12 col-xs-12">
+					<div class="product-image"> 
+						<img src="https://www.bootdey.com/image/194x228/B0C4DE" alt="194x228" class="img-responsive"> 
+						<span class="tag2 hot">
+							HOT
+						</span> 
+					</div>
+				</div>
+				<div class="col-md-7 col-sm-12 col-xs-12">
+				<div class="product-deatil">
+						<h5 class="name">
+							<a href="#">
+								Product Name Title Here <span>Category</span>
+							</a>
+						</h5>
+						<p class="price-container">
+							<span>$99</span>
+						</p>
+						<span class="tag1"></span> 
+				</div>
+				<div class="description">
+					<p>Proin in ullamcorper lorem. Maecenas eu ipsum </p>
+				</div>
+				<div class="product-info smart-form">
+					<div class="row">
+						<div class="col-md-6 col-sm-6 col-xs-6"> 
+							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
+						</div>
+						<div class="col-md-6 col-sm-6 col-xs-6">
+							<div class="rating">
+								<label for="stars-rating-5"><i class="fa fa-star"></i></label>
+								<label for="stars-rating-4"><i class="fa fa-star"></i></label>
+								<label for="stars-rating-3"><i class="fa fa-star text-primary"></i></label>
+								<label for="stars-rating-2"><i class="fa fa-star text-primary"></i></label>
+								<label for="stars-rating-1"><i class="fa fa-star text-primary"></i></label>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end product -->
+</div>
+<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
+	<!-- product -->
+	<div class="product-content product-wrap clearfix">
+		<div class="row">
+				<div class="col-md-5 col-sm-12 col-xs-12">
+					<div class="product-image"> 
 						<img src="https://www.bootdey.com/image/194x228/48D1CC" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
@@ -226,7 +323,7 @@
 	<!-- end product -->
 </div>
 </div>
-    <br>
+</div>
     <footer class="footer">
         <div class="container">
             <div class="row">
