--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -20,6 +20,7 @@
           <a href="#">Catalog</a>
           <a href="#">Parts</a>
           <a href="#">About Us</a>
+          <a href="#" class="toggle-button">&#9776;</a>
         
       </nav>
     <div class="mainDiv">
