--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -53,7 +53,7 @@
 							</a>
 						</h5>
 						<p class="price-container">
-							<span>800$</span>
+							<span>$800.00</span>
 						</p>
 						<span class="tag1"></span> 
 				</div>
@@ -88,7 +88,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="https://www.bootdey.com/image/194x228/B0C4DE" alt="194x228" class="img-responsive"> 
+						<img src="../Photo/Product2.png" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -98,16 +98,16 @@
 				<div class="product-deatil">
 						<h5 class="name">
 							<a href="#">
-								Product Name Title Here <span>Category</span>
+								OMEN 40L Gaming Desktop PC GT21-1001a <span>Desktop</span>
 							</a>
 						</h5>
 						<p class="price-container">
-							<span>$99</span>
+							<span>$2932.00</span>
 						</p>
 						<span class="tag1"></span> 
 				</div>
 				<div class="description">
-					<p>Proin in ullamcorper lorem. Maecenas eu ipsum </p>
+					<p>13th Generation Intel® Core™ i7 processor Windows 11 Home NVIDIA® GeForce RTX™ 3070 (8 GB GDDR6 dedicated) with LHR Kingston FURY 16 GB DDR5-4000 MHz XMP RGB Heatsink RAM (2 x 8 GB) 1 TB WD Black PCIe® NVMe™ TLC M.2 SSD Weighs 18.7 kg </p>
 				</div>
 				<div class="product-info smart-form">
 					<div class="row">
@@ -136,7 +136,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="https://www.bootdey.com/image/194x228/D3D3D3" alt="194x228" class="img-responsive"> 
+						<img src="../Photo/Product3.avif" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -146,16 +146,16 @@
 				<div class="product-deatil">
 						<h5 class="name">
 							<a href="#">
-								Product Name Title Here <span>Category</span>
+								HP Pavilion 31.5 inch All-in-One Desktop PC 32-b0004a Bundle <span>Desktop</span>
 							</a>
 						</h5>
 						<p class="price-container">
-							<span>$99</span>
+							<span>$3599.00</span>
 						</p>
 						<span class="tag1"></span> 
 				</div>
 				<div class="description">
-					<p>Proin in ullamcorper lorem. Maecenas eu ipsum </p>
+					<p>12th Generation Intel® Core™ i5 processor Windows 11 Home 31.5" diagonal QHD display 16 GB DDR4-3200 MHz RAM (2 x 8 GB) 512 GB PCIe® NVMe™ TLC M.2 SSD Intel® UHD Graphics 730 Weighs 14 kg </p>
 				</div>
 				<div class="product-info smart-form">
 					<div class="row">
@@ -184,7 +184,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="https://www.bootdey.com/image/194x228/B0C4DE" alt="194x228" class="img-responsive"> 
+						<img src="../Photo/Product4.avif" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -194,16 +194,16 @@
 				<div class="product-deatil">
 						<h5 class="name">
 							<a href="#">
-								Product Name Title Here <span>Category</span>
+								DELL XPS 13 Laptop <span>Laptop</span>
 							</a>
 						</h5>
 						<p class="price-container">
-							<span>$99</span>
+							<span>$1249.00</span>
 						</p>
 						<span class="tag1"></span> 
 				</div>
 				<div class="description">
-					<p>Proin in ullamcorper lorem. Maecenas eu ipsum </p>
+					<p>Dell XPS 13 (9310), 13.4- inch FHD+ Touch Laptop - Intel Core i7-1185G7, 16GB 4267MHz LPDDR4x RAM, 512GB SSD, Iris Xe Graphics, Windows 10 Pro - Platinum Silver with Black Palmrest</p>
 				</div>
 				<div class="product-info smart-form">
 					<div class="row">
@@ -232,7 +232,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="https://www.bootdey.com/image/194x228/B0C4DE" alt="194x228" class="img-responsive"> 
+						<img src="../Photo/Product5.png" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -242,16 +242,16 @@
 				<div class="product-deatil">
 						<h5 class="name">
 							<a href="#">
-								Product Name Title Here <span>Category</span>
+								Razer Blade 18 <span>Gaming Laptop</span>
 							</a>
 						</h5>
 						<p class="price-container">
-							<span>$99</span>
+							<span>$2899.00</span>
 						</p>
 						<span class="tag1"></span> 
 				</div>
 				<div class="description">
-					<p>Proin in ullamcorper lorem. Maecenas eu ipsum </p>
+					<p>Get the ultimate desktop replacement with the most powerful laptop we’ve ever made, featuring the latest Intel® 13th Gen Core™ i9 HX processors and NVIDIA® GeForce RTX™ 40 Series graphics. </p>
 				</div>
 				<div class="product-info smart-form">
 					<div class="row">
@@ -280,7 +280,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="https://www.bootdey.com/image/194x228/48D1CC" alt="194x228" class="img-responsive"> 
+						<img src="../Photo/Product6.png" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -290,16 +290,16 @@
 				<div class="product-deatil">
 						<h5 class="name">
 							<a href="#">
-								Product Name Title Here <span>Category</span>
+								24‑inch iMac Apple <span>Desktop</span>
 							</a>
 						</h5>
 						<p class="price-container">
-							<span>$99</span>
+							<span>$1399.99</span>
 						</p>
 						<span class="tag1"></span> 
 				</div>
 				<div class="description">
-					<p>Proin in ullamcorper lorem. Maecenas eu ipsum </p>
+					<p>M1 integrates the processor, graphics, memory, and more onto a single chip. That let us put an entire computer into a space so small it practically disappears. </p>
 				</div>
 				<div class="product-info smart-form">
 					<div class="row">
