added features to pages responsiveness

--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -90,13 +90,13 @@
         <h1 class="bestSellerH1">Best seller brands</h1>
         <br>
         <div class="image-row"> 
-            <img src="../Photo/Dell_thumbnail (1).png" alt="" style="width: 150; height: 110px;">
-            <img src="../Photo/plsWork.png" alt=""style="width: 130; height: 110px;">
-            <img src="../Photo/lenovo.png" alt="" style="width: 150; height: 110px;">
-            <img src="../Photo/nig.png" alt="" style="width: 150; height: 110px;">
-            <img src="../Photo/apple_thumbnail.png" alt="" style="width: 150; height: 110px;">
-            <img src="../Photo/download.png" alt="" style="width: 150; height: 100px;">
-            <img src="../Photo/Windows_logo_-_2012.svg.png" alt="" style="width: 100px; height: 100px; padding-top: 5px;">   
+            <img src="../Photo/Dell_thumbnail (1).png" alt="">
+            <img src="../Photo/plsWork.png" alt="">
+            <img src="../Photo/lenovo.png" alt="" >
+            <img src="../Photo/nig.png" alt="" >
+            <img src="../Photo/download (1).png" alt="">
+            <img src="../Photo/download.png" alt="" >
+            <img src="../Photo/Windows_logo_-_2012.svg.png" alt="">   
         </div>
         <br>
         <h1 class="bestSellerH1">Editors recommendation</h1>
