--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
-    <link rel="stylesheet" href="../CSS/mainPage.css">
+   <link rel="stylesheet" href="../CSS/mainPage.css">
     <link rel="stylesheet" href="../CSS/catalogPageCard.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../CSS/mainPageFooter.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -31,6 +32,11 @@
         <!-- Add your catalog content here -->
     </div>
     <div class="secondDiv">
+		<!-- Link to jQuery -->
+		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+
+		<!-- Link to Bootstrap JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
 <div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
@@ -60,7 +66,8 @@
 				<div class="description">
 					<p>14” 2.8K OLED convertible laptop
                         16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-				</div>
+				<br>
+					</div>
 				<div class="product-info smart-form">
 					<div class="row">
 						<div class="col-md-6 col-sm-6 col-xs-6"> <br>
@@ -204,6 +211,7 @@
 				</div>
 				<div class="description">
 					<p>Dell XPS 13 (9310), 13.4- inch FHD+ Touch Laptop - Intel Core i7-1185G7, 16GB 4267MHz LPDDR4x RAM, 512GB SSD, Iris Xe Graphics, Windows 10 Pro - Platinum Silver with Black Palmrest</p>
+				<br>
 				</div>
 				<div class="product-info smart-form">
 					<div class="row">
@@ -300,6 +308,7 @@
 				</div>
 				<div class="description">
 					<p>M1 integrates the processor, graphics, memory, and more onto a single chip. That let us put an entire computer into a space so small it practically disappears. </p>
+				<br>
 				</div>
 				<div class="product-info smart-form">
 					<div class="row">
