--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -17,7 +17,7 @@
         
           <a href="../HTML/MainPage.html">Home</a>
           <a href="#">Service</a>
-          <a href="CatalogPage.html">Catalog</a>
+          <a href="../HTML/CatalogPage.html">Catalog</a>
           <a href="#">Parts</a>
           <a href="#">About Us</a>
           <a href="#" class="toggle-button">&#9776;</a>
