--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -19,7 +19,7 @@
             <a href="#">Service</a>
             <a href="CatalogPage.html">Catalog</a>
             <a href="#">Parts</a>
-            <a href="#">About Us</a>
+            <a href="../HTML/AboutUs.html">About Us</a>
             <!-- per navigation barin -->
         </nav>
         <br><br><br>
@@ -224,7 +224,7 @@
 
                 With years of industry ...
             </p><br><br><br>
-                    <a href="AboutUs.html" class="button glow-button">Read More</a>
+                    <a href="../HTML/AboutUs.html" class="button glow-button">Read More</a>
         </div>
                 <div class="column">
                         <img src="../Photo/My project.png" class="foto-about">
