--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -52,13 +52,13 @@
         <h1 class="bestSellerH1">Best seller brands</h1>
         <br>
         <div class="image-row"> 
-            <img src="../Photo/Dell_thumbnail (1).png" alt="">
-            <img src="../Photo/plsWork.png" alt="">
-            <img src="../Photo/lenovo.png" alt="" >
-            <img src="../Photo/nig.png" alt="" >
-            <img src="../Photo/download (1).png" alt="">
-            <img src="../Photo/download.png" alt="" >
-            <img src="../Photo/Windows_logo_-_2012.svg.png" alt="">   
+            <img id="img1" src="../Photo/Dell_thumbnail (1).png" alt="">
+            <img id="img2" src="../Photo/plsWork.png" alt="">
+            <img id="img3" src="../Photo/lenovo.png" alt="" >
+            <img id="img4" src="../Photo/nig.png" alt="" >
+            <img id="img5" src="../Photo/download (1).png" alt="">
+            <img id="img6" src="../Photo/download.png" alt="" >
+            <img id="img7" src="../Photo/Windows_logo_-_2012.svg.png" alt="">   
         </div>
         <br>
         <h1 class="bestSellerH1">Editors recommendation</h1>
