--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
    <link rel="stylesheet" href="../CSS/mainPage.css">
-    <link rel="stylesheet" href="../CSS/catalogPageCard.css">
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../CSS/mainPageFooter.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../CSS/catalogPageCard.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -22,7 +23,7 @@
             <a href="#">Service</a>
             <a href="#">Catalog</a>
             <a href="#">Parts</a>
-            <a href="#">About Us</a>
+            <a href="AboutUs.html">About Us</a>
             <!-- per navigation barin -->
         </nav>
         <br><br>
@@ -45,7 +46,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
+					<br><br><br>	<img src="../Photo/Product1.png" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -54,7 +55,7 @@
 				<div class="col-md-7 col-sm-12 col-xs-12">
 				<div class="product-deatil">
 						<h5 class="name">
-							<a href="#">
+							<a href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
 								ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
 							</a>
 						</h5>
@@ -95,7 +96,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="../Photo/Product2.png" alt="194x228" class="img-responsive"> 
+						<br><br><br>  <img src="../Photo/Product2.png" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -143,7 +144,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="../Photo/Product3.avif" alt="194x228" class="img-responsive"> 
+						<br><br><br>	<img src="../Photo/Product3.avif" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -191,7 +192,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="../Photo/Product4.avif" alt="194x228" class="img-responsive"> 
+						<br><br><br>	<img src="../Photo/Product4.avif" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -240,7 +241,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="../Photo/Product5.png" alt="194x228" class="img-responsive"> 
+						<br><br><br>	<img src="../Photo/Product5.png" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
@@ -288,7 +289,7 @@
 		<div class="row">
 				<div class="col-md-5 col-sm-12 col-xs-12">
 					<div class="product-image"> 
-						<img src="../Photo/Product6.png" alt="194x228" class="img-responsive"> 
+						<br><br><br>	<img src="../Photo/Product6.png" alt="194x228" class="img-responsive"> 
 						<span class="tag2 hot">
 							HOT
 						</span> 
