--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -102,8 +102,25 @@
 
                         </script>
             </div>
-        
+            <h1 class="abt-title">Where to find us?</h1>
+            <div class="about">   
+                <div class="parag">
+                    <p class="abt-txt">         
+                        Don't miss out on the opportunity to explore the latest innovations and experience exceptional customer service.
+                         Visit Tech Haven today at 2203 E Empire St, Bloomington, IL 61704, USA, and let us redefine your tech journey. See you soon!
+                     </p>
+                    </div>
+
+                 <img src="../Photo/location.webp" class="abt-photo">
         </div>
+        <div class="mapouter">
+            <div class="gmap_canvas">
+                <iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+                src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=2203 E Empire St, Bloomington, IL 61704, USA&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+                </iframe>
+            </div>
+        </div>
+    </div>
 
     <footer class="footer">
         <div class="container">
