--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -20,7 +20,7 @@
           <a href="CatalogPage.html">Catalog</a>
           <a href="#">Parts</a>
           <a href="../HTML/contactUs.html">Contact Us</a>
-          <a href="#">About Us</a>
+          <a href="../HTML/AboutUs.html">About Us</a>
           <a href="#" class="toggle-button">&#9776;</a>
         
       </nav>
@@ -188,7 +188,7 @@
 
         With years of industry ...
      </p><br><br><br>
-     <a href="#" class="button glow-button">Read More</a>
+     <a href="./AboutUs.html" class="button glow-button">Read More</a>
     </div>
     <div class="column">
      <img src="../Photo/My project.png" class="foto-about">
