--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
-   <link rel="stylesheet" href="../CSS/mainPage.css">
-   
+    <!--<link rel="stylesheet" href="../CSS/mainPage.css">-->
+    <link rel="stylesheet" href="../CSS/navbar.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../CSS/mainPageFooter.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -17,30 +18,26 @@
 
 </head>
 <body>
-    <div class="mainDiv">
-        <nav class="navBar">
-            <a href="../HTML/MainPage.html">Home</a>
-            <a href="#">Service</a>
-            <a href="#">Catalog</a>
-            <a href="#">Parts</a>
-            <a href="AboutUs.html">About Us</a>
-            <!-- per navigation barin -->
-        </nav>
-        <br><br>
-        <!-- Content specific to the catalog page -->
-        <h1>Catalog</h1>
-        <p>Here you can find our product catalog.</p>
-        <!-- Add your catalog content here -->
-    </div>
+	<nav class="navBar">
+        
+		<a href="../HTML/MainPage.html">Home</a>
+		<a href="CatalogPage.html">Catalog</a>
+		<a href="#">Parts</a>
+		<a href="../HTML/contactUs.html">Contact Us</a>
+		<a href="AboutUs.html">About Us</a>
+		<a href="#" class="toggle-button">&#9776;</a>
+	  
+	</nav>
+	<br><br>
     <div class="secondDiv">
+		<h1>Here you can find all the products:</h1>
 		<!-- Link to jQuery -->
-		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
-		<!-- Link to Bootstrap JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container">
-<div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
+	<!-- Link to Bootstrap JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <div class="container">
+    <div class="col-xs-12 col-md-6 bootstrap snippets bootdeys">
 	<!-- product -->
 	<div class="product-content product-wrap clearfix">
 		<div class="row">
@@ -67,7 +64,7 @@
 				<div class="description">
 					<p>14” 2.8K OLED convertible laptop
                         16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-				<br>
+				<br><br>
 					</div>
 				<div class="product-info smart-form">
 					<div class="row">
@@ -120,7 +117,7 @@
 				<div class="product-info smart-form">
 					<div class="row">
 						<div class="col-md-6 col-sm-6 col-xs-6"> 
-							<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
+							<a href="#" class="btn btn-success">Add to cart</a>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6">
 							<div class="rating">
@@ -830,5 +827,10 @@
             &copy; 2023 PC STORE. All rights reserved.
         </p>
     </footer>
+	<!-- Link to jQuery -->
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+
+	<!-- Link to Bootstrap JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
