--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -17,10 +17,10 @@
     <nav class="navBar">
         
           <a href="../HTML/MainPage.html">Home</a>
-          <a href="CatalogPage.html">Catalog</a>
+          <a href="../HTML/">Catalog</a>
           <a href="#">Parts</a>
           <a href="../HTML/contactUs.html">Contact Us</a>
-          <a href="#">About Us</a>
+          <a href="../HTML/AboutUs.html">About Us</a>
           <a href="#" class="toggle-button">&#9776;</a>
         
       </nav>
