--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -11,15 +11,17 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="../CSS/navbar.css">
 
 </head>
 <body>
     <div class="mainDiv">
         <nav class="navBar">
             <a href="../HTML/MainPage.html">Home</a>
-            <a href="#">Service</a>
+            
             <a href="CatalogPage.html">Catalog</a>
             <a href="#">Parts</a>
+            <a href="#">Contact Us</a>
             <a href="../HTML/AboutUs.html">About Us</a>
             <!-- per navigation barin -->
         </nav>
@@ -60,7 +62,7 @@
                     </div>
                     <div class="team-slide">
                         <img src="../Photo/man3.png" class="team-mem">
-                        <h3>Angjelo Goga</h3>
+                        <h3>Angjelos Goga</h3>
                         <p>Back-end developer</p>
                       </div>
                       <div class="team-slide">
