--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -14,15 +14,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="../CSS/navbar.css">
 
 </head>
 <body>
-    <div class="mainDiv">
+    <div class="mainDiv" id="mainDiv">
         <nav class="navBar">
             <a href="../HTML/MainPage.html">Home</a>
-            <a href="#">Service</a>
             <a href="#">Catalog</a>
             <a href="#">Parts</a>
+			<a href="#">Contact Us</a>
             <a href="AboutUs.html">About Us</a>
             <!-- per navigation barin -->
         </nav>
@@ -340,7 +341,7 @@
                 <div class="footer-col">
                     <h4>Reach to Us</h4>
                     <ul>
-                        <li><a href="https://goo.gl/maps/Bk2WFKBgYETUSXpy7">2203 E. Empire Street, Suite J Bloomington, IL, USA 61704</a></li>
+                        <li><a href="https://goo.gl/maps/Bk2WFKBgYETUSXpy7">2203 E. Empire Street, Suite J Bloomington, IL, SEMAN 61704</a></li>
                         <li><a href="#"> Phone: +355692085698</a></li>
                         <li><a href="#">Phone: +44-458-20-369</a></li>
                         <li><a href="#">Email: pcstore@yahoo.com</a></li>
