--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -20,7 +20,7 @@
           <a href="CatalogPage.html">Catalog</a>
           <a href="#">Parts</a>
           <a href="../HTML/contactUs.html">Contact Us</a>
-          <a href="#">About Us</a>
+          <a href="../HTML/AboutUs.html">About Us</a>
           <a href="#" class="toggle-button">&#9776;</a>
         
       </nav>
