--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/mainPage.css">
+    <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../CSS/AbouUs.css">
         <link rel="stylesheet" href="../CSS/mainPageFooter.css">
@@ -96,7 +96,7 @@
                                 showSlide(currentIndex);
                                 }
 
-                                setInterval(showNextSlide, 5000); // Change slide every 5 seconds
+                                setInterval(showNextSlide, 3000); // Change slide every 3 seconds
 
                                 showSlide(currentIndex);
 
